<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/hero"
        android:layout_width="537dp"
        android:layout_height="164dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints" >

        <TextView
            android:id="@+id/textHero"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:gravity="left"
            android:textSize="18sp"
            android:layout_width="229dp"
            android:layout_height="57dp"
            android:text="@string/asking"
            android:textColor="@android:color/background_light"
            app:fontFamily="@font/roboto_black" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_marginRight="150dp"
            android:layout_gravity="right"
            android:layout_width="200dp"
            android:layout_height="129dp"
            app:srcCompat="@drawable/hero_icon" />
        <Button
            android:id="@+id/btnRead"
            android:layout_width="230px"
            android:layout_height="80px"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/btn_rounded_corner2"
            android:fontFamily="@font/roboto_bold"
            android:onClick="read"
            android:text="Read Now"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        tools:layout_editor_absoluteY="170dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!--Card 1-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cardMedian"
                    android:layout_width="303dp"
                    android:layout_height="298dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/thumb__1_" />

                <TextView
                    android:id="@+id/card01title"
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:textColor="#313E50"
                    android:textSize="16sp"
                    android:text="@string/card02_title"
                    app:fontFamily="@font/roboto_bold" />

                <TextView
                    android:id="@+id/card01desc"
                    android:layout_width="236dp"
                    android:layout_height="51dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="160dp"
                    android:gravity="left"
                    android:text="@string/card02_desc"
                    android:textColor="#A5A5A6"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto" />
                
                <Button
                    android:id="@+id/btnMedian"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="solve"
                    android:layout_width="200px"
                    android:layout_height="76px"
                    android:layout_marginTop="230dp"
                    android:layout_marginRight="75dp"
                    android:text="@string/solve"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:background="@drawable/btn_rounded_corner"
                    />



            </FrameLayout>
<!--Card 1 End-->

<!--Card 2 Start-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cardMean"
                    android:layout_width="303dp"
                    android:layout_height="298dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/thumb__4_" />

                <TextView
                    android:id="@+id/card02title"
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:textColor="#313E50"
                    android:textSize="16sp"
                    android:text="@string/card03_title"
                    app:fontFamily="@font/roboto_bold" />

                <TextView
                    android:id="@+id/card02des"
                    android:layout_width="236dp"
                    android:layout_height="51dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="160dp"
                    android:gravity="left"
                    android:text="@string/card03_desc"
                    android:textColor="#A5A5A6"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto" />

                <Button
                    android:id="@+id/btnMean"
                    android:onClick="solve"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_width="200px"
                    android:layout_height="76px"
                    android:layout_marginTop="230dp"
                    android:layout_marginRight="75dp"
                    android:text="@string/solve"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:background="@drawable/btn_rounded_corner"
                    />

            </FrameLayout>
<!--Card 2 End-->

<!--Card 3 Start-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/cardModus"
                    android:layout_width="303dp"
                    android:layout_height="298dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/thumb__2_" />

                <TextView
                    android:id="@+id/card03title"
                    android:layout_width="303dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:textColor="#313E50"
                    android:textSize="16sp"
                    android:text="@string/card01_title"
                    app:fontFamily="@font/roboto_bold" />

                <TextView
                    android:id="@+id/card03decs"
                    android:layout_width="236dp"
                    android:layout_height="51dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="160dp"
                    android:gravity="left"
                    android:text="@string/card01_desc"
                    android:textColor="#A5A5A6"
                    android:textSize="12sp"
                    app:fontFamily="@font/roboto" />

                <Button
                    android:id="@+id/btnModus"
                    android:onClick="solve"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_width="200px"
                    android:layout_height="76px"
                    android:layout_marginTop="230dp"
                    android:layout_marginRight="75dp"
                    android:text="@string/solve"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:layout_gravity="right"
                    android:background="@drawable/btn_rounded_corner"
                    />

            </FrameLayout>
<!-- Card 3 End   -->
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textProduct01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product01"
        android:textColor="@color/font"
        app:fontFamily="@font/roboto_black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/hero"
        android:layout_marginTop="5dp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="173dp" />


</androidx.constraintlayout.widget.ConstraintLayout>